[project]
name = "markup-document-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafał Celiński",email = "dev@rafalcelinski.pl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "markup_document_converter", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
