[project]
name = "markup-document-converter"
version = "0.2.2"
description = ""
authors = [
    {name = "Rafał Celiński",email = "dev@rafalcelinski.pl"},
    {name = "Mateusz Łukasiewicz",email = "mateuszlu2106@gmail.com"},
    {name = "Przemysław Walecki", email= "p.walecki12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "typer[all] (>=0.15.3,<0.16.0)"
]

[tool.poetry]
packages = [{include = "markup_document_converter", from = "src"}]

[tool.poetry.scripts]
markdown_example = "tests.converters.markdown_converter_example:main"
markup_document_converter = "markup_document_converter.cli:app" 

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
